syntax = "proto3";

option go_package = "github.com/guiln/prom-gateway/proto";

message IncrementCounterRequest {
    string counter_name = 1;
    optional string counter_help = 2;
}

message IncrementCounterResponse {
    enum IncrementCounterResult {
        SUCCESS = 0;
        FAILED = 1;
    }

    IncrementCounterResult result = 1;
}

service Metrics {
    rpc IncrementCounter(IncrementCounterRequest) returns (IncrementCounterResponse);
}
